Fixed W3C validator markup errors.

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 		<div class="twelve columns">
 			<h3>What Is Enterprise?</h3>
             <div>
-                <iframe src="http://ghbtns.com/github-btn.html?user=sevenbits&repo=enterprise&type=watch&count=true&size=small" allowtransparency="true" frameborder="0" scrolling="0" width="150" height="20" style="float: left;"></iframe>
+                <iframe src="http://ghbtns.com/github-btn.html?user=sevenbits&amp;repo=enterprise&amp;type=watch&amp;count=true&amp;size=small" width="150" height="20" style="float: left;"></iframe>
                 <a href="https://travis-ci.org/SevenBits/Enterprise" style="float: left;">
                     <img src="https://travis-ci.org/SevenBits/Enterprise.png" alt="Travis Build Status">
                 </a>
