Added the new Enterprise logo and banner to the page.

--- a/index.html
+++ b/index.html
@@ -67,6 +67,9 @@
             <p>Please note that obtaining Enterprise in this fashion means doing lots of setup work. If you simply want to create a bootable USB, please consider using <a href="http://sevenbits.github.io/Mac-Linux-USB-Loader/" target="_blank">Mac Linux USB Loader</a>, which sets up Enterprise for you.</p>
 		</div>
 		<div class="twelve columns">
+            <div>
+                <img src="images/BlueEnterpriseBanner.png" alt="Enterprise logo banner" style="width: 100%;"/>
+            </div>
 			<h3>What Is Enterprise?</h3>
             <div>
                 <iframe src="http://ghbtns.com/github-btn.html?user=sevenbits&amp;repo=enterprise&amp;type=watch&amp;count=true&amp;size=small" width="150" height="20" style="float: left;"></iframe>
