Mention potential multi-distribution support.

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@ kernel /casper/vmlinuz.efi</pre>
                     <tbody>
                         <tr>
                             <td>entry</td>
-                            <td><strong>Coming in a future version of Enterprise.</strong></td>
+                            <td><strong>Coming in a future version of Enterprise.</strong> Used to support booting multiple distributions from one Enterprise installation.</td>
                         </tr>
                         <tr>
                             <td>family</td>
