--- a/index.html
+++ b/index.html
@@ -149,11 +149,11 @@ kernel /casper/vmlinuz.efi</pre>
                         </tr>
                         <tr>
                             <td>kernel</td>
-                            <td>Specifies, relative to the root of the ISO, like absolute path to the Linux kernel.</td>
+                            <td>Specifies, relative to the root of the ISO, the absolute path to the Linux kernel.</td>
                         </tr>
                         <tr>
                             <td>initrd</td>
-                            <td>Specifies, relative to the root of the ISO, like absolute path to the Linux initial RAM disc.</td>
+                            <td>Specifies, relative to the root of the ISO, the absolute path to the Linux initial RAM disc.</td>
                         </tr>
                         <tr>
                             <td>root</td>
