Added clarifying details.

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
             <p>Enterprise is intended as a tool to be used alongside Mac Linux USB Loader, and so it is not really intended to be installed in the same manner as one would install a traditional bootloader like GRUB. That being said, it is possible to use Enterprise without Mac Linux USB Loader, as they are wholly separate tools, however in this circumstance additional setup is required.</p>
             <p>To get the best performance from Enterprise, and to take advantage of any super cool stuff I add to it, you should download the source code, as the official repository includes a number of tools to assist in setup.</p>
-            <p>However, for beginners and casual users, you should begin by downloading the Enterprise binaries. You can do that at the pane to the left. Then you need to set up a configuration file on your USB drive, under the EFI/BOOT directory &#40;which should be created if it doesn't exist&#41; <em>.MLUL&#45;Live&#45;USB</em> that tells Enterprise details about the distribution that you want to boot from your USB drive. Here's a sample file:</p>
+            <p>However, for beginners and casual users, you should begin by downloading the Enterprise binaries. You can do that at the pane to the left. Then you need to set up a configuration file on your USB drive named <em>.MLUL&#45;Live&#45;USB</em> under the EFI/BOOT directory &#40;which should be created if it doesn't exist&#41; which tells Enterprise details about the distribution that you want to boot from your USB drive. Here's a sample file:</p>
             
             <!--<p>
                 <div style="background: #ffffff; overflow:auto;width:auto;border:solid gray;border-width:.1em .1em .1em .8em;padding:.2em .6em;">
