Change source name to say Github, not Git.

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             
             <p><strong>Unstable:</strong></p>
             <p><a href="javascript:void(0);">Version 0.1.1</a> (19 December 2013)</p>
-            <p><a href="https://github.com/SevenBits/Enterprise/archive/master.zip" target="_blank">Current Source on Git</a></p>
+            <p><a href="https://github.com/SevenBits/Enterprise/archive/master.zip" target="_blank">Current Source on Github</a></p>
             
             <p>Please note that obtaining Enterprise in this fashion means doing lots of setup work. If you simply want to create a bootable USB, please consider using <a href="http://sevenbits.github.io/Mac-Linux-USB-Loader/" target="_blank">Mac Linux USB Loader</a>, which sets up Enterprise for you.</p>
 		</div>
