Added note about new way of specifying options to kernel.

--- a/index.html
+++ b/index.html
@@ -149,7 +149,10 @@ kernel /casper/vmlinuz.efi</pre>
                         </tr>
                         <tr>
                             <td>kernel</td>
-                            <td>Specifies, relative to the root of the ISO, the absolute path to the Linux kernel.</td>
+                            <td>
+                            	Specifies, relative to the root of the ISO, the absolute path to the Linux kernel. <br/>
+                            	<strong>Note:</strong> It is possible to pass custom options to this kernel by specifying them after the path. See above for an example.
+                            </td>
                         </tr>
                         <tr>
                             <td>initrd</td>
