Announce relative path change.

--- a/index.html
+++ b/index.html
@@ -154,8 +154,8 @@ kernel /casper/vmlinuz.efi</pre>
                         <tr>
                         	<td>iso</td>
                         	<td>
-                        		The <em>absolute</em> path to the ISO that you wish to associate with this particular entry. If not specified, it defaults to <code>/efi/boot/boot.iso</code>.<br/>
-                        		<strong>Warning:</strong> Although an absolute path is not required, it is recommended, because the behavior of relative paths may change in the future.
+                        		The path to the ISO that you wish to associate with this particular entry relative to the location of the Enterprise binary. If not specified, it defaults to <code>boot.iso</code>.<br/>
+                        		<strong>Warning:</strong> The behavior of this paarameter may change in the future.
                         	</td>
                         </tr>
                         <tr>
