--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
             <p>There are currently no stable releases.</p>
             
             <p><strong>Unstable:</strong></p>
+            <p><a href="https://github.com/SevenBits/Enterprise/releases/download/v0.2.1-beta/Enterprise-0.2.1.tar.gz">Version 0.2.1</a> (15 October 2014)</p>
             <p><a href="javascript:void(0);">Version 0.1.1</a> (19 December 2013)</p>
             <p><a href="https://github.com/SevenBits/Enterprise/archive/master.zip" target="_blank">Current Source on Github</a></p>
             
