Fix spelling error.

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@ kernel /casper/vmlinuz.efi</pre>
                         	<td>iso</td>
                         	<td>
                         		The path to the ISO that you wish to associate with this particular entry relative to the location of the Enterprise binary. If not specified, it defaults to <code>boot.iso</code>.<br/>
-                        		<strong>Warning:</strong> The behavior of this paarameter may change in the future.
+                        		<strong>Warning:</strong> The behavior of this parameter may change in the future.
                         	</td>
                         </tr>
                         <tr>
