Remove cellspacing attribute from table.

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ kernel /casper/vmlinuz.efi</pre>
             
             <p>At the very minimum, you need <em>at least</em> the <code>family</code> parameter. This tells Enterprise which distribution you are trying to boot and loads default options based on this. All of these default options can be overwritten. The default options for each parameter are:</p>
             <p>
-                <table cellspacing='0'>
+                <table>
                     <thead>
                         <tr>
                             <th>Distribution</th>
@@ -131,7 +131,7 @@ kernel /casper/vmlinuz.efi</pre>
             <p>Naturally, the <code>kernel</code> and <code>initrd</code> parameters can be altered by adding the respective line to the <em>.MLUL&#45;Live&#45;USB</em> file. This is demonstrated above with the <code>kernel</code> parameter. You can pass a variety of additional options, including&#58;</p>
             
             <p>
-                <table cellspacing='0'>
+                <table>
                     <thead>
                         <tr>
                             <th>Parameter</th>
