Use https for all links
This increases security and makes sure that all content is loaded over a secure connection.

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	<link rel="stylesheet" href="stylesheets/layout.css" type="text/css">
 	<link rel="stylesheet" href="stylesheets/table.css" type="text/css">
 	<!--[if lt IE 9]>
-		<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+		<script src="https://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 	<![endif]-->
 	<!-- Favicons
 		================================================== -->
@@ -75,7 +75,7 @@
 
 				<p>Please note that obtaining Enterprise in this fashion means doing lots
 				of setup work. If you simply want to create a bootable USB, please
-				consider using <a href="http://sevenbits.github.io/Mac-Linux-USB-Loader/"
+				consider using <a href="https://sevenbits.github.io/Mac-Linux-USB-Loader/"
 				target="_blank">Mac Linux USB Loader</a>, which sets up Enterprise for
 				you.</p>
 			</div>
@@ -88,7 +88,7 @@
 
 				<div>
 					<iframe src=
-					"http://ghbtns.com/github-btn.html?user=sevenbits&amp;repo=enterprise&amp;type=watch&amp;count=true&amp;size=small"
+					"https://ghbtns.com/github-btn.html?user=sevenbits&amp;repo=enterprise&amp;type=watch&amp;count=true&amp;size=small"
 					width="150" height="20" style="float: left;"></iframe> <a href=
 					"https://travis-ci.org/SevenBits/Enterprise" style=
 					"float: left;"><img src=
@@ -112,7 +112,7 @@
 				the supplied Enterprise binaries won't work on these platforms.</p>
 
 				<p>Enterprise is designed to compliment <a href=
-				"http://sevenbits.github.io/Mac-Linux-USB-Loader/" target="_blank">Mac
+				"https://sevenbits.github.io/Mac-Linux-USB-Loader/" target="_blank">Mac
 				Linux USB Loader</a>, though it can also be used separately (albeit with
 				some setup work). The purpose of Enterprise is as the first stage in a
 				two-stage booting process for Mac Linux USB Loader-created USB
@@ -265,7 +265,7 @@
 				</table>
 
 				<p>Have questions or comments? Feel free to <a href=
-				"http://sevenbits.github.io/contact.html">contact me</a> with any
+				"https://sevenbits.github.io/contact.html">contact me</a> with any
 				requests, etc.</p>
 
 				<h4>Contributions</h4>
