Spell "GitHub" correctly

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
 				<p>Current Version: 0.2.1</p>
 
-				<p>Enterprise can be obtained from the official repository on Github.
+				<p>Enterprise can be obtained from the official repository on GitHub.
 				Click on the links below to be directed to the appropriate pages:</p>
 
 				<p><strong>Stable:</strong></p>
@@ -71,7 +71,7 @@
 				<p><a href="javascript:void(0);">Version 0.1.1</a> (19 December 2013)</p>
 
 				<p><a href="https://github.com/SevenBits/Enterprise/archive/master.zip"
-				target="_blank">Current Source on Github</a></p>
+				target="_blank">Current Source on GitHub</a></p>
 
 				<p>Please note that obtaining Enterprise in this fashion means doing lots
 				of setup work. If you simply want to create a bootable USB, please
