Update to include Enterprise 0.3.0
Included a link to the latest Enterprise binary and updated
instructions to reflect the change in the Enterprise configuration
file name.

--- a/index.html
+++ b/index.html
@@ -65,6 +65,10 @@
 				<p><strong>Unstable:</strong></p>
 
 				<p><a href=
+				"https://github.com/SevenBits/Enterprise/releases/download/v0.3.0/Enterprise-0.3.0.tar.gz">
+				Version 0.3.0</a> (30 June 2015)</p>
+
+				<p><a href=
 				"https://github.com/SevenBits/Enterprise/releases/download/v0.2.1-beta2/Enterprise-0.2.1.tar.gz">
 				Version 0.2.1</a> (14 November 2014)</p>
 
@@ -155,7 +159,7 @@
 				downloading the Enterprise binaries. You can do that at the pane to the
 				left. Then you need to set up a configuration file on your USB drive
 				under the EFI/BOOT directory (which should be created if it doesn't
-				exist) named <em>.MLUL-Live-USB</em> which tells Enterprise details about
+				exist) named <em>enterprise.cfg</em> which tells Enterprise details about
 				the distribution that you want to boot from your USB drive. Here's a
 				sample file:</p>
 				<script src="https://gist.github.com/SevenBits/466f078ac3dfbd028a4b.js"
@@ -196,7 +200,7 @@
 
 				<p>Naturally, the <code>kernel</code> and <code>initrd</code> parameters
 				can be altered by adding the respective line to the
-				<em>.MLUL-Live-USB</em> file. This is demonstrated above with the
+				<em>enterprise.cfg</em> file. This is demonstrated above with the
 				<code>kernel</code> parameter. You can pass a variety of additional
 				options, including:</p>
 
