Use the latest version of the Skeleton CSS framework

--- a/index.html
+++ b/index.html
@@ -20,10 +20,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<!-- CSS
 		================================================== -->
-	<link rel="stylesheet" href="stylesheets/base.css" type="text/css">
-	<link rel="stylesheet" href="stylesheets/skeleton.css" type="text/css">
-	<link rel="stylesheet" href="stylesheets/layout.css" type="text/css">
-	<link rel="stylesheet" href="stylesheets/table.css" type="text/css">
+	<link rel="stylesheet" href="stylesheets/normalize.css">
+	<link rel="stylesheet" href="stylesheets/skeleton.css">
 	<!--[if lt IE 9]>
 		<script src="https://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 	<![endif]-->
@@ -84,7 +82,7 @@
 				you.</p>
 			</div>
 
-			<div class="twelve columns">
+			<div class="eight columns">
 				<div><img src="images/BlueEnterpriseBanner.png" alt=
 				"Enterprise logo banner" style="width: 100%;"></div>
 
@@ -93,12 +91,12 @@
 				<div>
 					<iframe src=
 					"https://ghbtns.com/github-btn.html?user=sevenbits&amp;repo=enterprise&amp;type=watch&amp;count=true&amp;size=small"
-					width="150" height="20" style="float: left;"></iframe> <a href=
+					width="150" height="20" style="float: left;  border: none;"></iframe> <a href=
 					"https://travis-ci.org/SevenBits/Enterprise" style=
 					"float: left;"><img src=
 					"https://travis-ci.org/SevenBits/Enterprise.png" alt=
 					"Travis Build Status"></a>
-				</div><br class="clear">
+				</div><br style="clear: both;">
 
 				<p>Enterprise (named after the Starship Enterprise from <em>Star
 				Trek</em>) is an EFI program that is designed to assist in booting Linux
@@ -299,7 +297,7 @@
 		</div><!-- end row -->
 
 		<div class="row">
-			<div class="three.columns offset-by-thirteen"><small>Proudly made in
+			<div class="three columns offset-by-ten"><small>Proudly made in
 			America!</small> <img src="images/united_states_of_america.png" alt=
 			"The USA flag"></div>
 		</div><!-- end row -->
