Use the proper semantic tags

--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
 					"Travis Build Status"></a>
 				</div><br style="clear: both;">
 
-				<p>Enterprise (named after the Starship Enterprise from <em>Star
-				Trek</em>) is an EFI program that is designed to assist in booting Linux
+				<p>Enterprise (named after the Starship Enterprise from <i>Star
+				Trek</i>) is an EFI program that is designed to assist in booting Linux
 				distributions from USB sticks on Intel Macs, something that is
 				continously regarded as being near to impossible due to quirks in Apple's
 				EFI implementation and really quite poor support from Linux
@@ -157,7 +157,7 @@
 				downloading the Enterprise binaries. You can do that at the pane to the
 				left. Then you need to set up a configuration file on your USB drive
 				under the EFI/BOOT directory (which should be created if it doesn't
-				exist) named <em>enterprise.cfg</em> which tells Enterprise details about
+				exist) named <code>enterprise.cfg</code> which tells Enterprise details about
 				the distribution that you want to boot from your USB drive. Here's a
 				sample file:</p>
 				<script src="https://gist.github.com/SevenBits/466f078ac3dfbd028a4b.js"
@@ -198,7 +198,7 @@
 
 				<p>Naturally, the <code>kernel</code> and <code>initrd</code> parameters
 				can be altered by adding the respective line to the
-				<em>enterprise.cfg</em> file. This is demonstrated above with the
+				<code>enterprise.cfg</code> file. This is demonstrated above with the
 				<code>kernel</code> parameter. You can pass a variety of additional
 				options, including:</p>
 
