Updated with link to Enterprise 0.3.1.

--- a/index.html
+++ b/index.html
@@ -63,6 +63,10 @@
 				<p><strong>Unstable:</strong></p>
 
 				<p><a href=
+				"https://github.com/SevenBits/Enterprise/releases/download/v0.3.1/Enterprise-0.3.1.tar.gz">
+				Version 0.3.1</a> (24 August 2015)</p>
+
+				<p><a href=
 				"https://github.com/SevenBits/Enterprise/releases/download/v0.3.0/Enterprise-0.3.0.tar.gz">
 				Version 0.3.0</a> (30 June 2015)</p>
 
