Clarifies the usage of a configuration file parameter
Makes the description of the entry parameter a lot more specific.

--- a/index.html
+++ b/index.html
@@ -226,8 +226,9 @@
 						<tr>
 							<td>entry</td>
 
-							<td>Used to support booting multiple distributions from one
-							Enterprise installation.</td>
+							<td>Used to mark the start of a new boot option. All future
+							options will apply to the newly-created entry. There must be
+							at least one entry in a file for it to be valid.</td>
 						</tr>
 
 						<tr>
