--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 			<div class="four columns">
 				<h3>Get Enterprise</h3>
 
-				<p>Current Version: 0.3.1</p>
+				<p>Current Version: 0.3.2</p>
 
 				<p>Enterprise can be obtained from the official repository on GitHub.
 				Click on the links below to be directed to the appropriate pages:</p>
@@ -61,6 +61,10 @@
 				<p>There are currently no stable releases.</p>
 
 				<p><strong>Unstable:</strong></p>
+
+				<p><a href=
+				"https://github.com/SevenBits/Enterprise/releases/download/v0.3.2/Enterprise-0.3.2.tar.gz">
+				Version 0.3.2</a> (28 November 2015)</p>
 
 				<p><a href=
 				"https://github.com/SevenBits/Enterprise/releases/download/v0.3.1/Enterprise-0.3.1.tar.gz">
