Make the HTML tables look better

--- a/index.html
+++ b/index.html
@@ -198,14 +198,14 @@
 						<tr>
 							<td>Ubuntu</td>
 
-							<td><strong>kernel:</strong> <code>/casper/vmlinuz</code>
+							<td><strong>kernel:</strong> <code>/casper/vmlinuz</code> <br/>
 							<strong>initrd:</strong> <code>/casper/initrd.lz</code></td>
 						</tr>
 
 						<tr>
 							<td>Debian</td>
 
-							<td><strong>kernel:</strong> <code>/live/vmlinuz</code>
+							<td><strong>kernel:</strong> <code>/live/vmlinuz</code> <br/>
 							<strong>initrd:</strong> <code>/live/initrd.img</code></td>
 						</tr>
 					</tbody>
@@ -220,7 +220,7 @@
 				<table>
 					<thead>
 						<tr>
-							<th>Parameter</th>
+							<th>Parameter Name</th>
 
 							<th>Effect</th>
 						</tr>
